# python-graphlayer

./: .gitignore  .travis.yml  LICENSE  README.rst  README.src.rst  makefile  pyproject.toml  setup.py  test-requirements.txt  tox.ini
.github/workflows/: tests.yml
examples/: intro_sqlalchemy.py
examples/sqlalchemy/: makefile
examples/sqlalchemy/booksapp/: server.py
examples/sqlalchemy/booksapp/database/: __init__.py  authors.py  base.py  books.py
examples/sqlalchemy/booksapp/graph/: __init__.py  authors.py  books.py  root.py
examples/sqlalchemy/graphiql/: index.html  package-lock.json  package.json
examples/sqlalchemy/static/: graphiql.js
examples/starwars_sqlalchemy/: server.py
examples/starwars_sqlalchemy/graphiql/: index.html  package-lock.json  package.json  webpack.config.js
examples/starwars_sqlalchemy/graphiql/src/: index.js
examples/starwars_sqlalchemy/static/: graphiql.css
graphlayer/: __init__.py  connections.py  core.py  expanders.py  fields.py  graphql.py  iterables.py  memo.py  representations.py  resolvers.py  schema.py  sqlalchemy.py  unions.py
graphlayer/graphql/: __init__.py  naming.py  parser.py  schema.py
performance/: list_of_objects.py
tests/: matchers.py  test_connections.py  test_core.py  test_graphlayer.py  test_graphql.py  test_representations.py  test_resolvers.py  test_schema.py  test_sqlalchemy.py  test_unions.py
tests/graphql/: test_graphql.py  test_parser.py  test_schema.py
